2004-09-23  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe-object): fixed bignum/fixnum classification
	Reported by Jörg Höhle

2004-09-23  Bruno Haible  <bruno@clisp.org>

	* sequence.d (REVERSE): Fix wrong index check when the argument is a
	displaced vector. Fixes bug introduced on 1999-11-08.

2004-09-18  Bruno Haible  <bruno@clisp.org>

	* pathname.d (signal_type_error): New function.
	(LOGICAL-PATHNAME): Signal an error of type TYPE-ERROR if the parsing
	leads to a PARSE-ERROR.
	* condition.lisp (valid-logical-pathname-string-p): New function.

2004-09-20  Bruno Haible  <bruno@clisp.org>

	Treat the DEFCLASS :fixed-slot-locations option like user-defined
	options.
	* clos-class1.lisp (semi-standard-class): Provide an initarg and a
	default-initarg for the fixed-slot-locations slot.
	(*<standard-class>-valid-initialization-keywords*,
	*<standard-class>-default-initargs*): New constants.
	* clos-class3.lisp (defclass): Don't special-case :fixed-slot-locations
	option. Use *<standard-class>-valid-initialization-keywords*,
	*<standard-class>-default-initargs*.

2004-09-20  Bruno Haible  <bruno@clisp.org>

	Change syntax of DEFCLASS :fixed-slot-locations option.
	* clos-slotdef1.lisp (slot-definition, direct-slot-definition,
	effective-slot-definition, standard-slot-definition,
	standard-direct-slot-definition, standard-effective-slot-definition,
	structure-direct-slot-definition, structure-effective-slot-definition):
	Provide a boolean argument to the :fixed-slot-locations option.
	* clos-stablehash1.lisp (standard-stablehash): Likewise.
	* clos-specializer1.lisp (specializer, eql-specializer): Likewise.
	* clos-class1.lisp (class, built-in-class, slotted-class,
	structure-class, semi-standard-class, standard-class): Likewise.
	* clos-class3.lisp (reinitialize-instance-<class>,
	shared-initialize-<semi-standard-class>): Convert the option, a list,
	to a boolean.
	* clos-method1.lisp (standard-method, standard-accessor-method,