@@ -1,5 +1,10 @@
 2004-09-23  Sam Steingold  <sds@gnu.org>
 
+	* pathname.d (DEFAULT_VERSION): since all pathnames returned by
+	DIRECTORY must be truenames, DEFAULT_VERSION must be :NEWEST
+
+2004-09-23  Sam Steingold  <sds@gnu.org>
+
 	* describe.lisp (describe-object): fixed bignum/fixnum classification
 	Reported by Jörg Höhle
 
